--- a/i3/config
+++ b/i3/config
@@ -123,8 +123,9 @@ workspace $workspace10 output HDMI-1
 assign [class="Google-chrome"] → $workspace2
 assign [class="Keepassx2"] → $workspace7
 assign [class="MATLAB R2016b"] → $workspace5
-assign [class="Thunderbird"] → $workspace6
+assign [class="Nylas N1"] → $workspace6
 assign [class="Thunar"] → $workspace8
+assign [class="Transmission-gtk"] → $workspace8
 for_window [class="Spotify"] move to workspace $workspace9
 assign [class="secondscreen"] → $workspace10
 
@@ -186,6 +187,8 @@ mode "$mode_system" {
     bindsym l exec --no-startup-id lock, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym n exec --no-startup-id redshift -o, mode "default"
+    bindsym d exec --no-startup-id redshift -x, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
 
     # back to normal: Enter or Escape
@@ -222,7 +225,7 @@ exec --no-startup-id termite --exec="tty-clock -c -s -D -C 6" --class="clock"
 exec --no-startup-id termite --exec=htop --class="htop"
 exec --no-startup-id termite --class="term"
 exec --no-startup-id termite --exec="screenfetch -d '-shell;-uptime'" --hold --class="screenfetch"
-exec --no-startup-id xautolock -time 1 -locker lock -detectsleep -corners ----
+exec --no-startup-id xautolock -time 3 -locker lock -corners ----
 exec --no-startup-id xrandr --output LVDS-1 --primary --mode 1366x768 --pos 0x0 --rotate normal --output DP-1 --off --output HDMI-1 --off --output VGA-1 --off
 
 # open certain windows in floating mode
